--- a/views/pages/blog/index.html
+++ b/views/pages/blog/index.html
@@ -1,17 +1,32 @@
-<div>
-    <head>
-        <script src="/static/javascript/Vue/vue.js"></script>
-    </head>
-    <div id = "intro" style = "text-align:center;">
-        <h1>{{ message }}</h1>
-     </div>
-     <script type = "text/javascript">
-        var vue_det = new Vue({
-           el: '#intro',
-           data: {
-              message: 'My first VueJS Task'
-           }
-        });
-     </script>
-  </body>
+<html>
+
+<head>
+    <script src="/static/javascript/Vue/vue.js"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+</head>
+<div id="intro" style="text-align:center;">
+    <div v-for="post in page">
+        <p> id: {{post.id}}</p> <p> author: {{post.author}}</p> <p> title: {{post.title}}</p> <p> content: {{post.content}}</p>
+
+    </div>
+ 
 </div>
+<script type="text/javascript">
+    var vue_det = new Vue({
+        el: '#intro',
+        data: {
+            message: 'My first VueJS Task',
+            page: {}
+        },
+        mounted() {
+            axios.get('http://localhost:3000/api/blog').then((pages) => {
+                vue_det.$data.page = pages.data.posts
+            }).catch((err) => {
+                console.log(err)
+            });
+        }
+    });
+</script>
+</body>
+
+</html>
